# stapel-workspaces

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  codecov.yml  codegen_urls.py  conftest.py  conftest_urls.py  dto.py  errors.py  events.py  functions.py  gdpr.py  models.py  permissions.py  pyproject.toml  renovate.json  serializers.py  services.py  setup-hooks.sh  urls.py  views.py
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  errors.en.md  errors.json  errors.ru.md  schema.json
management/commands/: consume_auth_events.py
migrations/: 0001_initial.py
schemas/consumes/: user.deleted.json  user.deletion_initiated.json
schemas/emits/: workspace.created.json  workspace.member_joined.json  workspace.personal.created.json
schemas/functions/: workspaces.check_membership.json
tests/: test_api.py  test_api_invitations.py  test_api_members.py  test_api_workspaces_extra.py  test_brownfield_user_model.py  test_comm.py  test_contract.py  test_error_i18n.py  test_error_keys.py  test_gdpr_actions.py  test_internal_api.py  test_models.py  test_public_api.py
tests/brownfield_users/: _runner.py  models.py
translations/: .errors.ru.llm-cache.json  .state.json  errors.ru.json
