[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-workspaces"
version = "0.3.1"
description = "Team workspaces and RBAC Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "workspaces", "teams", "rbac"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
]

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_workspaces" = "."}
packages = [
    "stapel_workspaces",
    "stapel_workspaces.migrations",
    "stapel_workspaces.tests",
    "stapel_workspaces.management",
    "stapel_workspaces.management.commands",
]

[tool.setuptools.package-data]
stapel_workspaces = [
    "py.typed",
    "migrations/*.py",
    "migrations/**/*.py",
    "schemas/**/*.json",
    "schemas/emits/*.json",
    "schemas/consumes/*.json",
    "schemas/functions/*.json",
]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"

[tool.coverage.run]
# Exclude test scaffolding and generated migrations from coverage metrics.
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/conftest_urls.py",
]
