[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-workspaces"
version = "0.3.6"
description = "Team workspaces and RBAC Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "workspaces", "teams", "rbac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.8,<0.9",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-workspaces"
Repository = "https://github.com/usestapel/stapel-workspaces"
Documentation = "https://github.com/usestapel/stapel-workspaces#readme"
Changelog = "https://github.com/usestapel/stapel-workspaces/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-workspaces/issues"

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_workspaces" = "."}
packages = [
    "stapel_workspaces",
    "stapel_workspaces.migrations",
    "stapel_workspaces.management",
    "stapel_workspaces.management.commands",
]

[tool.setuptools.package-data]
stapel_workspaces = [
    "py.typed",
    "migrations/*.py",
    "migrations/**/*.py",
    "schemas/**/*.json",
    "schemas/emits/*.json",
    "schemas/consumes/*.json",
    "schemas/functions/*.json",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"

[tool.coverage.run]
# Exclude test scaffolding and generated migrations from coverage metrics.
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/conftest_urls.py",
]
